Fixed apt_key hopefully

--- a/local.yml
+++ b/local.yml
@@ -16,11 +16,13 @@
 
 # Adding Repo Keys
   - name: add Enpass key for repo
-    apt_key: https://apt.enpass.io/keys/enpass-linux.key
-    state: present
+    apt_key:
+      url: "https://apt.enpass.io/keys/enpass-linux.key"
+      state: present
   - name: add Vivaldi key for repo
-    apt_key: https://repo.vivaldi.com/archive/linux_signing_key.pub
-    state: present
+    apt_key:
+      url: "https://repo.vivaldi.com/archive/linux_signing_key.pub"
+      state: present
 
 
 # Installing Packages
