Added docker removal pre-reqs

--- a/local.yml
+++ b/local.yml
@@ -6,6 +6,15 @@
   tasks:
 
 # Remove packages
+  - name: Remove any residual docker packages
+    apt:
+      state: absent
+      name:
+        - docker
+        - docker-engine
+        - docker.io
+        - containerd
+        - runc
 
 
 # Adding Repo Keys
