added pip apt install

--- a/local.yml
+++ b/local.yml
@@ -66,6 +66,7 @@
         - code
         - profile-sync-daemon
         - gnome-boxes
+        - python-pip
 
 # Install Pip Packages
   - name: Install Pip Packages
