psd corrected to user scope

--- a/local.yml
+++ b/local.yml
@@ -82,10 +82,12 @@
       owner: cyberfighter
       group: cyberfighter
 
+
 # Systemd services
   - name: Start Profile Sync Daemon
     systemd:
       name: psd
+      scope: user
       state: started
       enabled: yes
 
