Testing become_user

--- a/local.yml
+++ b/local.yml
@@ -85,6 +85,7 @@
 
 # Systemd services
   - name: Start Profile Sync Daemon
+    become_user: cyberfighter
     systemd:
       name: psd
       scope: user
