testing ansible_lsb.codename

--- a/local.yml
+++ b/local.yml
@@ -64,7 +64,7 @@
       update_cache: yes
   - name: Add Docker repository into sources list
     apt_repository:
-      repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable
+      repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable
       state: present
       update_cache: yes
   
