Testing NAS Mounts

--- a/local.yml
+++ b/local.yml
@@ -5,6 +5,15 @@
 
   tasks:
 
+# Mount all drives
+  - name: Mount Network Drives
+    ansible.posix.mount:
+      src: synlgy-ds918.cyberfighter.space/scanner
+      path: /mnt/NAS_Scanner
+      opts: rw,sync,hard,intr
+      state: mounted
+      fstype: nfs
+
 # Remove packages
   - name: Remove any residual docker packages
     apt:
