updated to match old fstab file

--- a/local.yml
+++ b/local.yml
@@ -10,9 +10,9 @@
     mount:
       src: //synlgy-ds918.cyberfighter.space/scanner
       path: /mnt/NAS_Scanner
-      opts: rw,sync,hard,intr
+      opts: credentials=/home/cyberfighter/.nas_Jonny_credentials,iocharset=utf8,uid=1028,gid=100,noperm,vers=2.0 0 0
       state: mounted
-      fstype: nfs
+      fstype: cifs
 
 # Remove packages
   - name: Remove any residual docker packages
