--- a/local.yml
+++ b/local.yml
@@ -129,6 +129,12 @@
         - chromium
 
 # Install Flatpaks
+  - name: Add the flathub flatpak repository remote to the user installation
+    flatpak_remote:
+      name: flathub
+      state: present
+      flatpakrepo_url: https://dl.flathub.org/repo/flathub.flatpakrepo
+      method: user
   - name: Install Flatpaks
     flatpak:
         name: org.videolan.VLC
