--- a/local.yml
+++ b/local.yml
@@ -127,6 +127,8 @@
         - containerd.io
         - micro
         - chromium
+        - steam
+        - lutris
 
 # Install Flatpaks
   - name: Add the flathub flatpak repository remote to the user installation
