--- a/local.yml
+++ b/local.yml
@@ -5,6 +5,15 @@
 
   tasks:
 
+# Check if NAS is available
+  - name: Wait 10 seconds for NAS"
+    wait_for:
+      port: 111
+      host: '{{ synlgy-ds918.cyberfighter.space }}'
+      delay: 10
+    vars:
+      ansible_connection: home_network
+
 # Mount all drives
 # Install CFIS Prereqs
   - name: Install CFIS Prereqs
@@ -12,6 +21,7 @@
       name:
         - cifs-utils
   - name: Mount Scanner Network Drives
+    when: home_network
     mount:
       src: //synlgy-ds918.cyberfighter.space/scanner
       path: /mnt/NAS_Scanner
@@ -19,6 +29,7 @@
       state: mounted
       fstype: cifs
   - name: Mount Jonny Network Drives
+    when: home_network
     mount:
       src: //synlgy-ds918.cyberfighter.space/home
       path: /mnt/NAS_Jonny
@@ -26,6 +37,7 @@
       state: mounted
       fstype: cifs
   - name: Mount Temp Network Drives
+    when: home_network
     mount:
       src: //synlgy-ds918.cyberfighter.space/Temp
       path: /mnt/NAS_Temp
@@ -33,6 +45,7 @@
       state: mounted
       fstype: cifs
   - name: Mount Media Network Drives
+    when: home_network
     mount:
       src: //synlgy-ds918.cyberfighter.space/Media
       path: /mnt/NAS_Media
