--- a/local.yml
+++ b/local.yml
@@ -190,7 +190,7 @@
     when: "'AppImage' in item.name"
     get_url:                                                           
       url: "{{ item.browser_download_url }}"                       
-      dest: ~/Downloads/PrusaSlicer.AppImage
+      dest: "~/Downloads/{{ item.name }}"
       mode: '0775'
 
 
