--- a/local.yml
+++ b/local.yml
@@ -5,15 +5,6 @@
 
   tasks:
 
-# Check if NAS is available
-  # - name: Wait 10 seconds for NAS"
-  #   wait_for:
-  #     port: 111
-  #     host: synlgy-ds918.cyberfighter.space
-  #     delay: 10
-  #   vars:
-  #     ansible_connection: home_network
-
 # Mount all drives
 # Install CFIS Prereqs
   - name: Install CFIS Prereqs
@@ -117,12 +108,6 @@
       update_cache: yes
   
 
-
-# Refresh Apt Cache
-#  - name: Update apt cache
-#    apt:
-#      update_cache: yes
-
 # Installing Packages
   - name: Install packages
     package: 
@@ -188,10 +173,10 @@
     become_user: cyberfighter
     loop: "{{ PrusaSlicer_json_reponse.json.assets }}"
     when: "'AppImage' in item.name"
-    get_url:                                                           
-      url: "{{ item.browser_download_url }}"                       
-      dest: "~/Downloads/{{ item.name }}"
-      mode: '0775'
+    # get_url:                                                           
+    #   url: "{{ item.browser_download_url }}"                       
+    #   dest: "~/Downloads/{{ item.name }}"
+    #   mode: '0775'
 
 
 # Copying over config files
